# hipoglos

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: calendar.rs  config.rs  db.rs  main.rs  oauth.rs  sync.rs
